<resources>
    <string name="app_name">Show Applications With Ads</string>

    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Show Application with Ads 2017</b><br>
Versao %s<br><br>
<a href="http://www.abreuretto.com">Abreuretto</a><br><br>

	]]>
	</string>
    <string name="about_dialog_title">Applications with Ads</string>

    <!-- C -->
    <string name="carros">Apps with Ads</string>
    <string name="classicos">Installed Apps</string>
    <string name="configuracoes">Sobre</string>


    <!-- E -->
    <string name="esportivos">Apps Permissions</string>

    <!-- L -->
    <string name="luxo">Apps run in the Background</string>

    <!-- N -->
    <string name="nav_drawer_username">Abreu Retto</string>
    <string name="nav_drawer_email">abreu@abreuretto.com</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="sobre">About</string>
    <string name="site_do_livro">Libraries used by Apps</string>

    <!-- V -->
    <string name="vazio" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_carro">AppsWithAds</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_teste">TesteActivity</string>

</resources>
